2011-09-02  Guillaume Lazzara  <z@lrde.epita.fr>

	Regen generated files in Scribo.

	* headers.mk,
	* tests/unit_test/unit-tests.mk: Here.

2011-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix object selector for separators in scribo-viewer.

	* demo/viewer/common.hh: Add new values in enum.

	* demo/viewer/viewer.cc: Bind XML tag to enum value.

2011-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	* src/scribo-cli.in: Make Binarization algorithms accessible to
	scribo-cli.

2011-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Add an option parser to some examples.

	* scribo/debug/option_check.hh,
	* scribo/debug/option_parser.hh: New.

	* src/binarization/sauvola.cc,
	* src/binarization/sauvola_ms.cc,
	* src/binarization/sauvola_ms_fg.cc,
	* src/binarization/sauvola_ms_split.cc,
	* src/content_in_doc.cc,
	* src/pbm_text_in_doc.cc,
	* src/text_in_doc_preprocess.cc,
	* src/text_in_picture.cc,
	* src/text_in_picture_neg.cc,
	* src/text_recognition_in_picture.cc: Use the new option parser.

2011-08-22  Guillaume Lazzara  <z@lrde.epita.fr>

	Some cleanup and fixes.

	* scribo/core/group_info.hh,
	* scribo/core/object_groups.hh: Add merge method.

	* scribo/draw/groups_bboxes.hh: Only consider valid groups.

	* scribo/estim/components_features.hh,
	* scribo/primitive/extract/separators_nonvisible.hh,
	* scribo/subsampling/bilinear.hh,
	* scribo/text/extract_paragraphs.hh,
	* scribo/text/merging.hh: Remove debug output.

	* scribo/primitive/group/apply.hh,
	* scribo/primitive/regroup/from_single_left_link.hh,
	* scribo/primitive/regroup/from_single_left_link_wrt_h_ratio.hh:
	Fix invalid result.

	* scribo/toolchain/internal/content_in_doc_functor.hh: Remove comments.

	* scribo/toolchain/internal/text_in_picture_functor.hh: New.

	* scribo/toolchain/content_in_doc.hh,
	* scribo/toolchain/internal/text_in_doc_functor.hh,
	* scribo/toolchain/text_in_doc.hh,
	* scribo/toolchain/text_in_doc_preprocess.hh: Add verbose mode.
