@@ -1,4 +1,5 @@
-# Copyright (C) 2009 EPITA Research and Development Laboratory (LRDE).
+# Copyright (C) 2009, 2011 EPITA Research and Development Laboratory
+# (LRDE).
 #
 # This file is part of Olena.
 #
@@ -19,4 +20,5 @@ include $(top_srcdir)/scribo/scribo.mk
 SUBDIRS =					\
   extract 					\
   find 						\
-  group
+  group						\
+  remove
